--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <div style="display:grid;width:100vw;height:100vh;place-content:center;">
-        <h1>Website under construction.</h1>
+        <h1>Nothing to see here... yet</h1>
     </div>
 
 </body>
